--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,7 @@
 [submodule "modules/bzip2"]
 	path = modules/bzip2
 	url = http://sourceware.org/git/bzip2.git
+[submodule "modules/freeDiameter"]
+	path = modules/freeDiameter
+	url = https://github.com/omec-project/freediameter.git
+	branch = master
