--- a/.gitmodules
+++ b/.gitmodules
@@ -12,7 +12,7 @@
 	url = https://github.com/oktal/pistache.git
 [submodule "modules/bzip2"]
 	path = modules/bzip2
-	url = http://sourceware.org/git/bzip2.git
+	url = git://sourceware.org/git/bzip2.git
 [submodule "modules/freeDiameter"]
 	path = modules/freeDiameter
 	url = https://github.com/omec-project/freediameter.git
