--- a/exampleProgram/pfcp/src/Makefile.in
+++ b/exampleProgram/pfcp/src/Makefile.in
@@ -103,8 +103,9 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-bin_PROGRAMS = epctest$(EXEEXT)
-subdir = exampleProgram
+bin_PROGRAMS =  \
+	$(top_builddir)/exampleProgram/pfcp/bin/pfcpex$(EXEEXT)
+subdir = exampleProgram/pfcp/src
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
@@ -115,9 +116,11 @@ CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
-am_epctest_OBJECTS = epctest-test.$(OBJEXT)
-epctest_OBJECTS = $(am_epctest_OBJECTS)
-epctest_DEPENDENCIES =
+__top_builddir__exampleProgram_pfcp_bin_pfcpex_SOURCES =  \
+	$(top_builddir)/exampleProgram/pfcp/bin/pfcpex.c
+__top_builddir__exampleProgram_pfcp_bin_pfcpex_OBJECTS = __top_builddir__exampleProgram_pfcp_bin_pfcpex-pfcpex.$(OBJEXT)
+__top_builddir__exampleProgram_pfcp_bin_pfcpex_DEPENDENCIES =
+am__dirstamp = $(am__leading_dot)dirstamp
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
 am__v_P_0 = false
@@ -138,21 +141,20 @@ AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
 am__v_lt_0 = --silent
 am__v_lt_1 = 
-CXXCOMPILE = $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) \
-	$(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
-AM_V_CXX = $(am__v_CXX_@AM_V@)
-am__v_CXX_ = $(am__v_CXX_@AM_DEFAULT_V@)
-am__v_CXX_0 = @echo "  CXX     " $@;
-am__v_CXX_1 = 
-CXXLD = $(CXX)
-CXXLINK = $(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) $(AM_LDFLAGS) $(LDFLAGS) \
-	-o $@
-AM_V_CXXLD = $(am__v_CXXLD_@AM_V@)
-am__v_CXXLD_ = $(am__v_CXXLD_@AM_DEFAULT_V@)
-am__v_CXXLD_0 = @echo "  CXXLD   " $@;
-am__v_CXXLD_1 = 
-SOURCES = $(epctest_SOURCES)
-DIST_SOURCES = $(epctest_SOURCES)
+COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
+	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
+AM_V_CC = $(am__v_CC_@AM_V@)
+am__v_CC_ = $(am__v_CC_@AM_DEFAULT_V@)
+am__v_CC_0 = @echo "  CC      " $@;
+am__v_CC_1 = 
+CCLD = $(CC)
+LINK = $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@
+AM_V_CCLD = $(am__v_CCLD_@AM_V@)
+am__v_CCLD_ = $(am__v_CCLD_@AM_DEFAULT_V@)
+am__v_CCLD_0 = @echo "  CCLD    " $@;
+am__v_CCLD_1 = 
+SOURCES = $(top_builddir)/exampleProgram/pfcp/bin/pfcpex.c
+DIST_SOURCES = $(top_builddir)/exampleProgram/pfcp/bin/pfcpex.c
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -269,24 +271,21 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+#__top_builddir__bin_pfcpex_SOURCES
 
 #######################################
 # Build information for each library
 
 # Sources for epc
-epctest_SOURCES = test.cpp
-
-# Linker options libTestProgram
-#libepc_a_LDFLAGS = 
-
-# Compiler options. Here we are adding the include directory
-# to be searched for headers included in the source code.
-epctest_CPPFLAGS = -Wall -std=c++11 -I../include -I../modules/spdlog/include
-epctest_LDADD = -L../src -lepc -lcares -lpthread -lrt
+__top_builddir__exampleProgram_pfcp_bin_pfcpex_SOURCE = main.cpp pfcpex.cpp pfcpr15.cpp
+#pfcpex_CPPFLAGS = -Wall -std=c++11 -I../include -I../../../include/epc
+#pfcpex_LDADD = -L../../../src -lepc -lpthread -lrt
+__top_builddir__exampleProgram_pfcp_bin_pfcpex_CPPFLAGS = -Wall -std=c++11 -I../include -I../../../include/epc -I../../libpfcp/include -I../../../modules/spdlog/include
+__top_builddir__exampleProgram_pfcp_bin_pfcpex_LDADD = -L../../../src -L../../libpfcp/lib -lpfcp -lepc -lpthread -lrt
 all: all-am
 
 .SUFFIXES:
-.SUFFIXES: .cpp .o .obj
+.SUFFIXES: .c .o .obj
 $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
 	@for dep in $?; do \
 	  case '$(am__configure_deps)' in \
@@ -296,9 +295,9 @@ $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu exampleProgram/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu exampleProgram/pfcp/src/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu exampleProgram/Makefile
+	  $(AUTOMAKE) --gnu exampleProgram/pfcp/src/Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
 	  *config.status*) \
@@ -358,10 +357,13 @@ uninstall-binPROGRAMS:
 
 clean-binPROGRAMS:
 	-test -z "$(bin_PROGRAMS)" || rm -f $(bin_PROGRAMS)
+$(top_builddir)/exampleProgram/pfcp/bin/$(am__dirstamp):
+	@$(MKDIR_P) $(top_builddir)/exampleProgram/pfcp/bin
+	@: > $(top_builddir)/exampleProgram/pfcp/bin/$(am__dirstamp)
 
-epctest$(EXEEXT): $(epctest_OBJECTS) $(epctest_DEPENDENCIES) $(EXTRA_epctest_DEPENDENCIES) 
-	@rm -f epctest$(EXEEXT)
-	$(AM_V_CXXLD)$(CXXLINK) $(epctest_OBJECTS) $(epctest_LDADD) $(LIBS)
+$(top_builddir)/exampleProgram/pfcp/bin/pfcpex$(EXEEXT): $(__top_builddir__exampleProgram_pfcp_bin_pfcpex_OBJECTS) $(__top_builddir__exampleProgram_pfcp_bin_pfcpex_DEPENDENCIES) $(EXTRA___top_builddir__exampleProgram_pfcp_bin_pfcpex_DEPENDENCIES) $(top_builddir)/exampleProgram/pfcp/bin/$(am__dirstamp)
+	@rm -f $(top_builddir)/exampleProgram/pfcp/bin/pfcpex$(EXEEXT)
+	$(AM_V_CCLD)$(LINK) $(__top_builddir__exampleProgram_pfcp_bin_pfcpex_OBJECTS) $(__top_builddir__exampleProgram_pfcp_bin_pfcpex_LDADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
@@ -369,37 +371,35 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/epctest-test.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/__top_builddir__exampleProgram_pfcp_bin_pfcpex-pfcpex.Po@am__quote@
 
-.cpp.o:
-@am__fastdepCXX_TRUE@	$(AM_V_CXX)depbase=`echo $@ | sed 's|[^/]*$$|$(DEPDIR)/&|;s|\.o$$||'`;\
-@am__fastdepCXX_TRUE@	$(CXXCOMPILE) -MT $@ -MD -MP -MF $$depbase.Tpo -c -o $@ $< &&\
-@am__fastdepCXX_TRUE@	$(am__mv) $$depbase.Tpo $$depbase.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='$<' object='$@' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXXCOMPILE) -c -o $@ $<
+.c.o:
+@am__fastdepCC_TRUE@	$(AM_V_CC)$(COMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
+@am__fastdepCC_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/$*.Tpo $(DEPDIR)/$*.Po
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	$(AM_V_CC)source='$<' object='$@' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(AM_V_CC@am__nodep@)$(COMPILE) -c -o $@ $<
 
-.cpp.obj:
-@am__fastdepCXX_TRUE@	$(AM_V_CXX)depbase=`echo $@ | sed 's|[^/]*$$|$(DEPDIR)/&|;s|\.obj$$||'`;\
-@am__fastdepCXX_TRUE@	$(CXXCOMPILE) -MT $@ -MD -MP -MF $$depbase.Tpo -c -o $@ `$(CYGPATH_W) '$<'` &&\
-@am__fastdepCXX_TRUE@	$(am__mv) $$depbase.Tpo $$depbase.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='$<' object='$@' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXXCOMPILE) -c -o $@ `$(CYGPATH_W) '$<'`
+.c.obj:
+@am__fastdepCC_TRUE@	$(AM_V_CC)$(COMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ `$(CYGPATH_W) '$<'`
+@am__fastdepCC_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/$*.Tpo $(DEPDIR)/$*.Po
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	$(AM_V_CC)source='$<' object='$@' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(AM_V_CC@am__nodep@)$(COMPILE) -c -o $@ `$(CYGPATH_W) '$<'`
 
-epctest-test.o: test.cpp
-@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(epctest_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT epctest-test.o -MD -MP -MF $(DEPDIR)/epctest-test.Tpo -c -o epctest-test.o `test -f 'test.cpp' || echo '$(srcdir)/'`test.cpp
-@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/epctest-test.Tpo $(DEPDIR)/epctest-test.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='test.cpp' object='epctest-test.o' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(epctest_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o epctest-test.o `test -f 'test.cpp' || echo '$(srcdir)/'`test.cpp
+__top_builddir__exampleProgram_pfcp_bin_pfcpex-pfcpex.o: $(top_builddir)/exampleProgram/pfcp/bin/pfcpex.c
+@am__fastdepCC_TRUE@	$(AM_V_CC)$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(__top_builddir__exampleProgram_pfcp_bin_pfcpex_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -MT __top_builddir__exampleProgram_pfcp_bin_pfcpex-pfcpex.o -MD -MP -MF $(DEPDIR)/__top_builddir__exampleProgram_pfcp_bin_pfcpex-pfcpex.Tpo -c -o __top_builddir__exampleProgram_pfcp_bin_pfcpex-pfcpex.o `test -f '$(top_builddir)/exampleProgram/pfcp/bin/pfcpex.c' || echo '$(srcdir)/'`$(top_builddir)/exampleProgram/pfcp/bin/pfcpex.c
+@am__fastdepCC_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/__top_builddir__exampleProgram_pfcp_bin_pfcpex-pfcpex.Tpo $(DEPDIR)/__top_builddir__exampleProgram_pfcp_bin_pfcpex-pfcpex.Po
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	$(AM_V_CC)source='$(top_builddir)/exampleProgram/pfcp/bin/pfcpex.c' object='__top_builddir__exampleProgram_pfcp_bin_pfcpex-pfcpex.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(AM_V_CC@am__nodep@)$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(__top_builddir__exampleProgram_pfcp_bin_pfcpex_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -c -o __top_builddir__exampleProgram_pfcp_bin_pfcpex-pfcpex.o `test -f '$(top_builddir)/exampleProgram/pfcp/bin/pfcpex.c' || echo '$(srcdir)/'`$(top_builddir)/exampleProgram/pfcp/bin/pfcpex.c
 
-epctest-test.obj: test.cpp
-@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(epctest_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT epctest-test.obj -MD -MP -MF $(DEPDIR)/epctest-test.Tpo -c -o epctest-test.obj `if test -f 'test.cpp'; then $(CYGPATH_W) 'test.cpp'; else $(CYGPATH_W) '$(srcdir)/test.cpp'; fi`
-@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/epctest-test.Tpo $(DEPDIR)/epctest-test.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='test.cpp' object='epctest-test.obj' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(epctest_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o epctest-test.obj `if test -f 'test.cpp'; then $(CYGPATH_W) 'test.cpp'; else $(CYGPATH_W) '$(srcdir)/test.cpp'; fi`
+__top_builddir__exampleProgram_pfcp_bin_pfcpex-pfcpex.obj: $(top_builddir)/exampleProgram/pfcp/bin/pfcpex.c
+@am__fastdepCC_TRUE@	$(AM_V_CC)$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(__top_builddir__exampleProgram_pfcp_bin_pfcpex_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -MT __top_builddir__exampleProgram_pfcp_bin_pfcpex-pfcpex.obj -MD -MP -MF $(DEPDIR)/__top_builddir__exampleProgram_pfcp_bin_pfcpex-pfcpex.Tpo -c -o __top_builddir__exampleProgram_pfcp_bin_pfcpex-pfcpex.obj `if test -f '$(top_builddir)/exampleProgram/pfcp/bin/pfcpex.c'; then $(CYGPATH_W) '$(top_builddir)/exampleProgram/pfcp/bin/pfcpex.c'; else $(CYGPATH_W) '$(srcdir)/$(top_builddir)/exampleProgram/pfcp/bin/pfcpex.c'; fi`
+@am__fastdepCC_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/__top_builddir__exampleProgram_pfcp_bin_pfcpex-pfcpex.Tpo $(DEPDIR)/__top_builddir__exampleProgram_pfcp_bin_pfcpex-pfcpex.Po
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	$(AM_V_CC)source='$(top_builddir)/exampleProgram/pfcp/bin/pfcpex.c' object='__top_builddir__exampleProgram_pfcp_bin_pfcpex-pfcpex.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(AM_V_CC@am__nodep@)$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(__top_builddir__exampleProgram_pfcp_bin_pfcpex_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -c -o __top_builddir__exampleProgram_pfcp_bin_pfcpex-pfcpex.obj `if test -f '$(top_builddir)/exampleProgram/pfcp/bin/pfcpex.c'; then $(CYGPATH_W) '$(top_builddir)/exampleProgram/pfcp/bin/pfcpex.c'; else $(CYGPATH_W) '$(srcdir)/$(top_builddir)/exampleProgram/pfcp/bin/pfcpex.c'; fi`
 
 ID: $(am__tagged_files)
 	$(am__define_uniq_tagged_files); mkid -fID $$unique
@@ -516,6 +516,7 @@ clean-generic:
 distclean-generic:
 	-test -z "$(CONFIG_CLEAN_FILES)" || rm -f $(CONFIG_CLEAN_FILES)
 	-test . = "$(srcdir)" || test -z "$(CONFIG_CLEAN_VPATH_FILES)" || rm -f $(CONFIG_CLEAN_VPATH_FILES)
+	-test -z "$(top_builddir)/exampleProgram/pfcp/bin/$(am__dirstamp)" || rm -f $(top_builddir)/exampleProgram/pfcp/bin/$(am__dirstamp)
 
 maintainer-clean-generic:
 	@echo "This command is intended for maintainers to use"
@@ -607,6 +608,14 @@ uninstall-am: uninstall-binPROGRAMS
 
 .PRECIOUS: Makefile
 
+#pfcpex_SOURCES = main.cpp pfcpr15.cpp
+
+# Linker options libTestProgram
+#__top_builddir__bin_pfcpex_LDFLAGS = ../../libpfcp/lib/libpfcp.so
+
+# Compiler options. Here we are adding the include directory
+# to be searched for headers included in the source code.
+ #-I../modules/spdlog/include
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
