--- a/include/Makefile.in
+++ b/include/Makefile.in
@@ -292,11 +292,14 @@ nobase_include_HEADERS = \
    epc/egetopt.h           \
    epc/ehash.h             \
    epc/einternal.h         \
+   epc/eip.h               \
    epc/elogger.h           \
    epc/emsg.h              \
+   epc/eostring.h          \
    epc/epath.h             \
    epc/epcdns.h            \
    epc/epctools.h          \
+   epc/epfcp.h             \
    epc/eqbase.h            \
    epc/eqpriv.h            \
    epc/eqpub.h             \
@@ -308,6 +311,7 @@ nobase_include_HEADERS = \
    epc/esynch.h            \
    epc/esynch2.h           \
    epc/etbasic.h           \
+   epc/eteid.h             \
    epc/etevent.h           \
    epc/etime.h             \
    epc/etimer.h            \
