--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -154,9 +154,10 @@ am_libepc_a_OBJECTS = libepc_a-ebase.$(OBJEXT) \
 	libepc_a-emgmt.$(OBJEXT) libepc_a-edir.$(OBJEXT) \
 	libepc_a-eerror.$(OBJEXT) libepc_a-efd.$(OBJEXT) \
 	libepc_a-efdjson.$(OBJEXT) libepc_a-egetopt.$(OBJEXT) \
-	libepc_a-ehash.$(OBJEXT) libepc_a-elogger.$(OBJEXT) \
-	libepc_a-emsg.$(OBJEXT) libepc_a-epath.$(OBJEXT) \
-	libepc_a-epcdns.$(OBJEXT) libepc_a-eqbase.$(OBJEXT) \
+	libepc_a-ehash.$(OBJEXT) libepc_a-eip.$(OBJEXT) \
+	libepc_a-elogger.$(OBJEXT) libepc_a-emsg.$(OBJEXT) \
+	libepc_a-epath.$(OBJEXT) libepc_a-epcdns.$(OBJEXT) \
+	libepc_a-epfcp.$(OBJEXT) libepc_a-eqbase.$(OBJEXT) \
 	libepc_a-eqpriv.$(OBJEXT) libepc_a-eqpub.$(OBJEXT) \
 	libepc_a-eshmem.$(OBJEXT) libepc_a-esocket.$(OBJEXT) \
 	libepc_a-estatic.$(OBJEXT) libepc_a-estats.$(OBJEXT) \
@@ -339,10 +340,12 @@ libepc_a_SOURCES = \
    efdjson.cpp       \
    egetopt.cpp       \
    ehash.cpp         \
+   eip.cpp           \
    elogger.cpp       \
    emsg.cpp          \
    epath.cpp         \
    epcdns.cpp        \
+   epfcp.cpp         \
    eqbase.cpp        \
    eqpriv.cpp        \
    eqpub.cpp         \
@@ -371,7 +374,7 @@ libepc_a_SOURCES = \
 
 # Compiler options. Here we are adding the include directory
 # to be searched for headers included in the source code.
-libepc_a_CPPFLAGS = -Wall -std=c++11 -I$(top_srcdir)/include/epc -I$(top_srcdir)/modules/rapidjson/include -I$(top_srcdir)/modules/spdlog/include -I$(top_srcdir)/modules/c-ares
+libepc_a_CPPFLAGS = -fPIC -Wall -std=c++11 -I$(top_srcdir)/include/epc -I$(top_srcdir)/modules/rapidjson/include -I$(top_srcdir)/modules/spdlog/include -I$(top_srcdir)/modules/c-ares
 all: all-am
 
 .SUFFIXES:
@@ -459,11 +462,13 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libepc_a-efdjson.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libepc_a-egetopt.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libepc_a-ehash.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libepc_a-eip.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libepc_a-elogger.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libepc_a-emgmt.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libepc_a-emsg.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libepc_a-epath.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libepc_a-epcdns.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libepc_a-epfcp.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libepc_a-eqbase.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libepc_a-eqpriv.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libepc_a-eqpub.Po@am__quote@
@@ -481,15 +486,17 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libepc_a-eutil.Po@am__quote@
 
 .cpp.o:
-@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXXCOMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
-@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/$*.Tpo $(DEPDIR)/$*.Po
+@am__fastdepCXX_TRUE@	$(AM_V_CXX)depbase=`echo $@ | sed 's|[^/]*$$|$(DEPDIR)/&|;s|\.o$$||'`;\
+@am__fastdepCXX_TRUE@	$(CXXCOMPILE) -MT $@ -MD -MP -MF $$depbase.Tpo -c -o $@ $< &&\
+@am__fastdepCXX_TRUE@	$(am__mv) $$depbase.Tpo $$depbase.Po
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='$<' object='$@' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXXCOMPILE) -c -o $@ $<
 
 .cpp.obj:
-@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXXCOMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ `$(CYGPATH_W) '$<'`
-@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/$*.Tpo $(DEPDIR)/$*.Po
+@am__fastdepCXX_TRUE@	$(AM_V_CXX)depbase=`echo $@ | sed 's|[^/]*$$|$(DEPDIR)/&|;s|\.obj$$||'`;\
+@am__fastdepCXX_TRUE@	$(CXXCOMPILE) -MT $@ -MD -MP -MF $$depbase.Tpo -c -o $@ `$(CYGPATH_W) '$<'` &&\
+@am__fastdepCXX_TRUE@	$(am__mv) $$depbase.Tpo $$depbase.Po
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='$<' object='$@' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXXCOMPILE) -c -o $@ `$(CYGPATH_W) '$<'`
@@ -634,6 +641,20 @@ libepc_a-ehash.obj: ehash.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libepc_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libepc_a-ehash.obj `if test -f 'ehash.cpp'; then $(CYGPATH_W) 'ehash.cpp'; else $(CYGPATH_W) '$(srcdir)/ehash.cpp'; fi`
 
+libepc_a-eip.o: eip.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libepc_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libepc_a-eip.o -MD -MP -MF $(DEPDIR)/libepc_a-eip.Tpo -c -o libepc_a-eip.o `test -f 'eip.cpp' || echo '$(srcdir)/'`eip.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/libepc_a-eip.Tpo $(DEPDIR)/libepc_a-eip.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='eip.cpp' object='libepc_a-eip.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libepc_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libepc_a-eip.o `test -f 'eip.cpp' || echo '$(srcdir)/'`eip.cpp
+
+libepc_a-eip.obj: eip.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libepc_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libepc_a-eip.obj -MD -MP -MF $(DEPDIR)/libepc_a-eip.Tpo -c -o libepc_a-eip.obj `if test -f 'eip.cpp'; then $(CYGPATH_W) 'eip.cpp'; else $(CYGPATH_W) '$(srcdir)/eip.cpp'; fi`
+@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/libepc_a-eip.Tpo $(DEPDIR)/libepc_a-eip.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='eip.cpp' object='libepc_a-eip.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libepc_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libepc_a-eip.obj `if test -f 'eip.cpp'; then $(CYGPATH_W) 'eip.cpp'; else $(CYGPATH_W) '$(srcdir)/eip.cpp'; fi`
+
 libepc_a-elogger.o: elogger.cpp
 @am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libepc_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libepc_a-elogger.o -MD -MP -MF $(DEPDIR)/libepc_a-elogger.Tpo -c -o libepc_a-elogger.o `test -f 'elogger.cpp' || echo '$(srcdir)/'`elogger.cpp
 @am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/libepc_a-elogger.Tpo $(DEPDIR)/libepc_a-elogger.Po
@@ -689,6 +710,20 @@ libepc_a-epcdns.obj: epcdns.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='epcdns.cpp' object='libepc_a-epcdns.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libepc_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libepc_a-epcdns.obj `if test -f 'epcdns.cpp'; then $(CYGPATH_W) 'epcdns.cpp'; else $(CYGPATH_W) '$(srcdir)/epcdns.cpp'; fi`
+
+libepc_a-epfcp.o: epfcp.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libepc_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libepc_a-epfcp.o -MD -MP -MF $(DEPDIR)/libepc_a-epfcp.Tpo -c -o libepc_a-epfcp.o `test -f 'epfcp.cpp' || echo '$(srcdir)/'`epfcp.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/libepc_a-epfcp.Tpo $(DEPDIR)/libepc_a-epfcp.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='epfcp.cpp' object='libepc_a-epfcp.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libepc_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libepc_a-epfcp.o `test -f 'epfcp.cpp' || echo '$(srcdir)/'`epfcp.cpp
+
+libepc_a-epfcp.obj: epfcp.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libepc_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libepc_a-epfcp.obj -MD -MP -MF $(DEPDIR)/libepc_a-epfcp.Tpo -c -o libepc_a-epfcp.obj `if test -f 'epfcp.cpp'; then $(CYGPATH_W) 'epfcp.cpp'; else $(CYGPATH_W) '$(srcdir)/epfcp.cpp'; fi`
+@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/libepc_a-epfcp.Tpo $(DEPDIR)/libepc_a-epfcp.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='epfcp.cpp' object='libepc_a-epfcp.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libepc_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libepc_a-epfcp.obj `if test -f 'epfcp.cpp'; then $(CYGPATH_W) 'epfcp.cpp'; else $(CYGPATH_W) '$(srcdir)/epfcp.cpp'; fi`
 
 libepc_a-eqbase.o: eqbase.cpp
 @am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libepc_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libepc_a-eqbase.o -MD -MP -MF $(DEPDIR)/libepc_a-eqbase.Tpo -c -o libepc_a-eqbase.o `test -f 'eqbase.cpp' || echo '$(srcdir)/'`eqbase.cpp
