Added support for public and private work groups.    - A work group contains a single event queue and has multiple worker      threads that process events from the single event queue (first      come, first serve).    - Associated with the work group is a user defined worker thread.    - The minimum and maximum number of workers for the work group      allow for worker threads to be added and removed at run time,      with no fewer than the minimum number of worker threads and no      more than the maximum.    - See the work group example in epctest (exampleProgram/test.cpp). Converted the PFCP::ApplicationThread to PFCP::ApplicationWorkGroup    - See pfcpex for an example (exampleProgram/pfcp).

--- a/exampleProgram/Makefile.am
+++ b/exampleProgram/Makefile.am
@@ -19,7 +19,8 @@
 # The list of libraries we are building seperated by spaces.
 # The 'lib_' indicates that these build products will be installed
 # in the $(libdir) directory. For example #usr#lib
-bin_PROGRAMS = epctest
+#bin_PROGRAMS = epctest
+noinst_PROGRAMS = epctest
 
 #######################################
 # Build information for each library
