Adds submodule PcapPlusPlus
- Updates autoconf and README2.md

--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,6 @@
 	path = modules/freeDiameter
 	url = https://github.com/omec-project/freediameter.git
 	branch = master
+[submodule "modules/PcapPlusPlus"]
+	path = modules/PcapPlusPlus
+	url = https://github.com/seladb/PcapPlusPlus.git
