--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -41,6 +41,27 @@
                "ignoreFailures": true
             }
          ]
-      }
+      },
+      {
+         "name": "debug test",
+         "type": "cppdbg",
+         "request": "launch",
+         "program": "${workspaceFolder}/test/Tutorial-PacketParsing",
+         "args": [],
+         "stopAtEntry": false,
+         "cwd": "${workspaceFolder}/test",
+         "environment": [],
+         "externalConsole": false,
+         "MIMode": "gdb",
+         "setupCommands": [
+             {
+                 "description": "Enable pretty-printing for gdb",
+                 "text": "-enable-pretty-printing",
+                 "ignoreFailures": true
+             }
+         ],
+         "preLaunchTask": "build test",
+         "miDebuggerPath": "/usr/bin/gdb"
+     }
    ]
 }
